add pagination to category

--- a/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Category/Index.cshtml
@@ -45,6 +45,10 @@
                </tr>
            }
         </table>
+         <div page-model="@Model.PagingInfo" page-classes-enabled="true" page-class="btn border"
+             page-class-normal="btn btn-light" page-class-selected="btn btn-info active"
+             class="btn-group float-right"></div>
+        <br />
     }
     else
     {
