--- a/BulkyBook/Areas/Admin/Views/Company/Upsert.cshtml
+++ b/BulkyBook/Areas/Admin/Views/Company/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@model BulkyBook.Models.Category
+﻿@model BulkyBook.Models.Company
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -12,7 +12,7 @@
         @if (Model.Id != 0)
         {
             //Edit
-            title = "Edit Category";
+            title = "Edit Company";
         }
         <div class="col-12 border-bottom">
             <h2 class="text-primary">@title</h2>
@@ -25,6 +25,65 @@
                 <div class="col-8">
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group" row>
+                <div class="col-4">
+                    <label asp-for="StreetAddress"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="StreetAddress" class="form-control" />
+                    <span asp-validation-for="StreetAddress" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group" row>
+                <div class="col-4">
+                    <label asp-for="City"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="City" class="form-control" />
+                    <span asp-validation-for="City" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group" row>
+                <div class="col-4">
+                    <label asp-for="State"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="State" class="form-control" />
+                    <span asp-validation-for="State" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group" row>
+                <div class="col-4">
+                    <label asp-for="PostalCode"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="PostalCode" class="form-control" />
+                    <span asp-validation-for="PostalCode" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group" row>
+                <div class="col-4">
+                    <label asp-for="PhoneNumber"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="PhoneNumber" class="form-control" />
+                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group" row>
+                <div class="col-4">
+                    <label asp-for="IsAuthorizedCompany"></label>
+                </div>
+                <div class="col-8">
+                    <input type="checkbox" asp-for="IsAuthorizedCompany" class="form-control" />
                 </div>
             </div>
             <div class="form-group" row>
