--- a/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyBook/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,9 +1,9 @@
 ﻿
 
 @model BulkyBook.Models.ViewModels.ShoppingCartVM
-@*@using Microsoft.Extensions.Options
+@using Microsoft.Extensions.Options
 
-@inject IOptions<BulkyBook.Utility.StripeSettings> Stripe*@
+@inject IOptions<BulkyBook.Utility.StripeSettings> Stripe
 
 <form method="post">
     <br />
@@ -121,7 +121,7 @@
                           !Model.OrderHeader.ApplicationUser.Company.IsAuthorizedCompany)
                             {
                                 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                                        @*data-key="@Stripe.Value.PublishableKey"*@
+                                        data-key="@Stripe.Value.PublishableKey"
                                         data-amount="@OrderTotalForStripe"
                                         data-name="Bulky Book"
                                         data-label="Place Order"
