--- a/BulkyBook/Views/Shared/_Layout.cshtml
+++ b/BulkyBook/Views/Shared/_Layout.cshtml
@@ -59,6 +59,10 @@
                             </li>
                         }
 
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
+
                         @*Shopping cart*@
                         @if (HttpContextAccessor.HttpContext.Session.GetInt32(SD.ssShoppingCart) != null)
                         {
@@ -79,6 +83,7 @@
                                 </a>
                             </li>
                         }
+
 
                     </ul>
                 </div>
